# sparse_fourier_and_cs_on_xgboost

./: .gitignore  README.md  dataset_regression.py  fourier.py  fourier_extractor.py  node.py  proximal_method.py  random_forest_model.py  requirements.txt  setup.py  sync_with_server.sh  xgboost_model_regressor.py
learning_boolean_functions/dataset_management/: dataset_regression.py
learning_boolean_functions/sparse_wht_algorithms/swht/benchmarking/: .gitignore  CMakeLists.txt  benchmark_utils.h  full_benchmark.py  python_global_timing.cpp  python_utils.cpp  python_utils.h  raw_global_timing.cpp  visualize.ipynb
learning_boolean_functions/sparse_wht_algorithms/swht/benchmarking/data/compress/profiles/: raw_basic.csv  raw_robust.csv
learning_boolean_functions/sparse_wht_algorithms/swht/benchmarking/data/compress/results/: py_basic.csv  py_robust.csv  raw_basic.csv  raw_robust.csv
learning_boolean_functions/sparse_wht_algorithms/swht/benchmarking/data/low-py/profiles/: raw_basic.csv  raw_robust.csv
learning_boolean_functions/sparse_wht_algorithms/swht/benchmarking/data/low-py/results/: raw_basic.csv  raw_robust.csv
learning_boolean_functions/sparse_wht_algorithms/swht/benchmarking/data/master/profiles/: raw_basic.csv  raw_robust.csv
learning_boolean_functions/sparse_wht_algorithms/swht/benchmarking/data/master/results/: py_basic.csv  py_robust.csv  raw_basic.csv  raw_robust.csv
learning_boolean_functions/sparse_wht_algorithms/swht/benchmarking/plotting/: __init__.py  _constants.py  _datafiles.py  _filtering.py  _scripts.py  _visualizing.py
(+4857 files in other folders)
